--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Iurii Beliaev",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "mongodb": "^6.11.0",
